# ScalaScopeGraphs

./: README.md  hefty-algebras.cabal
aterm-res/java/classes/innerandimportedclasssamename.yes.test/: Test.aterm
aterm-res/java/classes/innerclasssamename.no.test/: C.aterm
aterm-res/java/classes/innerinnerclasssamename.no.test/: C.aterm
aterm-res/java/classes/toplevelandimportclasssamename.no.test/: List.aterm
aterm-res/java/duplicate-declarations/toplevelclass.no.test/: A.aterm
aterm-res/java/duplicate-declarations/toplevelinterface.no.test/: A.aterm
aterm-res/java/interfaces/circular.no.test/: I.aterm
aterm-res/java/interfaces/class-extends-interface.no.test/: A.aterm  I.aterm
aterm-res/java/interfaces/class-implements-class.no.test/: A.aterm
aterm-res/java/interfaces/classassignableasinterface.yes.test/: A.aterm  B.aterm
aterm-res/java/interfaces/diamondinheritance.yes.test/: A.aterm
aterm-res/java/interfaces/implementdiamondmethod.yes.test/: A.aterm  I.aterm  J.aterm  K.aterm
aterm-res/java/interfaces/implements-interface-with-extends.no.test/: A.aterm
aterm-res/java/interfaces/implements-interface-with-extends.yes.test/: A.aterm
aterm-res/java/interfaces/implementsempty.yes.test/: B.aterm
aterm-res/java/interfaces/implementsextendsmissing.no.test/: A.aterm  B.aterm  I.aterm
aterm-res/java/interfaces/implementsimpleinterface.yes.test/: A.aterm
aterm-res/java/interfaces/implementsinherited.yes.test/: B.aterm
aterm-res/java/interfaces/implementsmethodwithwrongreturntype.no.test/: A.aterm
aterm-res/java/interfaces/implementssimpleinterface.no.test/: A.aterm  I.aterm
aterm-res/java/interfaces/implementswithcontravariantreturn.no.test/: A.aterm  I.aterm
aterm-res/java/interfaces/implementswithcovariantreturn.yes.test/: A.aterm  I.aterm
aterm-res/java/interfaces/implementswithmultiplemethods.yes.test/: A.aterm  B.aterm  I.aterm
aterm-res/java/interfaces/implementwithcontravariantparam.no.test/: A.aterm  I.aterm
aterm-res/java/interfaces/implementwithcovariantparam.no.test/: A.aterm
aterm-res/java/interfaces/interface-extends-class.no.test/: A.aterm  I.aterm
aterm-res/java/interfaces/interface-with-extends.yes.test/: I.aterm
aterm-res/java/interfaces/selfinheritance.no.test/: I.aterm
aterm-res/java/locals/classdeclsinblockinorder.yes.test/: A.aterm
aterm-res/java/locals/classdeclsinblockoutoforder.no.test/: Test.aterm
aterm-res/java/names/import-missing-inner-class.no.test/: C.aterm
aterm-res/java/names/pkg-qual-import-inner-class.yes.test/: C.aterm
aterm-res/java/names/simple-nested-type-name.yes.test/: Test.aterm
aterm-res/java/names/simple-super-inner-type-name.yes.test/: C.aterm
aterm-res/java/names/simple-type-name.yes.test/: Test.aterm
aterm-res/lmr/modules/: import-outer-inner.aterm  qual-ref-to-inner.aterm  qual-ref.aterm  two-level-qual-ref.aterm
aterm-res/scala/comprehensive/example_01.scala/: test.aterm
aterm-res/scala/comprehensive/forward_ref.scala/: test.aterm
aterm-res/scala/comprehensive/paper_example.no.scala/: test.aterm
aterm-res/scala/comprehensive/paper_example.scala/: test.aterm
aterm-res/scala/defs/def-overlaps-with-self-name.scala/: test.aterm
aterm-res/scala/defs/duplicate-def.no.scala/: test.aterm
aterm-res/scala/defs/duplicate-type-decl.no.scala/: test.aterm
aterm-res/scala/defs/forward-ref-to-def-in-same-object.scala/: test.aterm
aterm-res/scala/defs/multiple-parameter-clauses-with-multiple-params.scala/: test.aterm
aterm-res/scala/defs/multiple-parameter-clauses.no.scala/: test.aterm
aterm-res/scala/defs/multiple-parameter-clauses.scala/: test.aterm
aterm-res/scala/defs/mutual-defs.scala/: test.aterm
aterm-res/scala/defs/nested-valdef.scala/: test.aterm
aterm-res/scala/defs/overlapping-type-and-value-declarations.scala/: test.aterm
aterm-res/scala/defs/overlapping-type-and-value-import-fine.scala/: test.aterm
aterm-res/scala/defs/recursive-def.scala/: test.aterm
aterm-res/scala/defs/type-decl.scala/: test.aterm
aterm-res/scala/defs/type-val-assignment.no.scala/: test.aterm
aterm-res/scala/defs/val-type-assignment.no.scala/: test.aterm
aterm-res/scala/defs/val-with-outer-type-decl.no.scala/: test.aterm
aterm-res/scala/simple/: empty.aterm
aterm/lib/ATerms/: ATerm.hs  Lexer.x
aterm/tests/: Integration.hs  Main.hs  Tests.hs
lang-hm/: AlgJ.hs  HMScope.hs  Main.hs  Syntax.hs
lang-mylang/: Syntax.hs  TypeCheck.hs
lang-mylang/app/: Main.hs
lang-mylang/lib/: Syntax.hs  TypeCheck.hs
lang-scala/app/: Main.hs
lang-scala/lib/: ATermParser.hs  Modules.hs  ScSyntax.hs  Syntax.hs  TypeChecker.hs
lang-scala/tests/: Main.hs  msTests.hs
lang-scala/tests/Statix/: Comprehensive.hs  Defs.hs  Expressions.hs  Imports.hs  Precedence.hs  References.hs  Statements.hs
lang-toy/app/: Main.hs
scope-graph/lib/Free/: Scope.hs
scope-graph/tests/: Tests.hs  Unification.hs
(+159 files in other folders)
