cabal-version:          2.4
name:                   hefty-algebras
version:                0.1.0.0

author:                 Casper Bach Poulsen
maintainer:             casperbp@gmail.com


-- Main library

library
    hs-source-dirs:     scope-graph/lib
    exposed-modules:    Free.Scope
                        Free.Error
                        Free.Logic.Exists
                        Free.Logic.Equals
                        Free.Logic.Generalize
                        Free.Logic.Or
                        Free
                        Data.Regex
                        Data.Term
    other-modules:      Elab
                        Hefty
    build-depends:      base >=4.14 && <5,
                        containers >= 0.6.5.1,
                        transformers >= 0.5.6.2,
                        ListLike
    default-language:   Haskell2010
    default-extensions: DerivingStrategies
                        TypeApplications
                        TypeOperators
                        RankNTypes
                        DeriveFunctor
                        StandaloneDeriving
                        KindSignatures
                        EmptyCase
                        MultiParamTypeClasses
                        GADTs
                        FunctionalDependencies
                        ScopedTypeVariables
                        QuantifiedConstraints
                        DataKinds
                        UndecidableInstances
                        FlexibleInstances
                        FlexibleContexts
                        IncoherentInstances
                        AllowAmbiguousTypes
                        LambdaCase
                        DeriveFoldable
                        DeriveGeneric
                        DeriveTraversable
                        DeriveAnyClass
                        PatternSynonyms
                        PartialTypeSignatures
    ghc-options:        -W
                        -O3
                        -threaded

test-suite scope-graph
    type:               exitcode-stdio-1.0
    main-is:            Tests.hs
    build-depends:      base >= 4.14,
                        transformers >= 0.5.6.2,
                        mtl >= 2.3.1,
                        HUnit ^>= 1.6.1,
                        hefty-algebras
    hs-source-dirs:     scope-graph/tests
    default-language:   Haskell2010
    other-modules:      Util
                        GraphConstruction
                        Resolution
                        RETest

-- Hindley Milner Example Language

executable hm
    main-is:            Main.hs
    build-depends:      base >= 4.14,
                        containers >= 0.6.5.1,
                        transformers >= 0.5.6.2,
                        hefty-algebras
    hs-source-dirs:     lang-hm
    default-language:   Haskell2010
    other-modules:      Syntax
                        HMScope
                        AlgJ
    default-extensions: TypeApplications
                        TypeOperators
                        FlexibleContexts
                        LambdaCase
    ghc-options:        -O3
                        -threaded

-- My Language

library mylang-lib
    hs-source-dirs:     lang-mylang/lib
    exposed-modules:    Syntax
                        TypeCheck
    build-depends:      base >=4.14 && <5,
                        containers >= 0.6.5.1,
                        transformers >= 0.5.6.2,
                        hefty-algebras
    default-language:   Haskell2010
    default-extensions: TypeApplications
                        TypeOperators
                        ScopedTypeVariables
                        LambdaCase
                        FlexibleContexts
    ghc-options:        -W
                        -O3
                        -threaded

executable mylang
    main-is:            Main.hs
    build-depends:      base >= 4.14,
                        containers >= 0.6.5.1,
                        transformers >= 0.5.6.2,
                        mylang-lib
    hs-source-dirs:     lang-mylang/app
    default-language:   Haskell2010
    default-extensions: TypeApplications
                        TypeOperators
                        ScopedTypeVariables
                        LambdaCase
                        FlexibleContexts
    ghc-options:        -O3
                        -threaded

test-suite mylang-test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    build-depends:      base >= 4.14,
                        transformers >= 0.5.6.2,
                        mtl >= 2.3.1,
                        HUnit ^>= 1.6.1,
                        hefty-algebras,
                        mylang-lib
    hs-source-dirs:     lang-mylang/tests
    default-language:   Haskell2010
    other-modules:      